--- a/gb/23/1/15/n13907272.md
+++ b/gb/23/1/15/n13907272.md
@@ -19,9 +19,6 @@
 <p>演出中展现的精神元素，也令Sikes相当感动。他认为，“演出将真相和希望非常清楚地传递给了观众，这很重要！我真的很喜欢。”</p>
 <p>责任编辑：曾臻</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906808.md#1">牧师赞神韵演出振奋人心 能量纯正</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906839.md#1">旧金山国际电影节营运总监：神韵像文化庆典</a></li>
@@ -30,36 +27,29 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906963.md#1">观神韵全新体验 公司董事：一定要再看一遍</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906973.md#1">IT会社社长：神韵能量是明天活力的来源</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/9/n10470479.md#1" target="_blank">林辉：写信赞成毛退位的陈铭枢之结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/13/n11256153.md#1" target="_blank">留守女孩的命运转变</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/25/n10085548.md#1" target="_blank">郑兢业：人吃与吃人（一 ）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/5/n9927251.md#1" target="_blank">澄清长江日报诽谤文章 武汉退休干部的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902596.md#1">【未解之谜】珍妮预言之三 2037年进入新纪元？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898887.md#1">乱世一书生 怎能拥有安定一城的能量？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904409.md#1">郑愚山：供销社的“大爷”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904371.md#1">楚一丁：天命与鬼神</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906514.md#1">【探索时分】如何成为美国伞兵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906448.md#1">【晚间新闻】疫情严峻 中共强办春晚 民间抵制</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906919.md#1">【十字路口】守日保台 美日新战术联合抗共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906069.md#1">多名中共警察密集死亡 最年轻者仅37岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906386.md#1">【新闻大家谈】王维洛：知青实名信 震惊党中央</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906323.md#1">攀上“高官女儿”云南公安局长给骗子数亿项目</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905708.md#1">称马国影星杨紫琼为香港演员 港共官员遭炮轰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906157.md#1">蓝心湄录除夕节目 与陈美凤唱跳秀少女穿搭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906509.md#1">75岁著名歌唱家谢莉斯去世 讣告未披露病因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906492.md#1">首度回应搬回香港原因 蔡少芬否认在沪豪宅放租</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905743.md#1">曾与金城武演父子 港星陈万雷在大陆染疫去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900876.md#1">战胜感冒的5个最佳方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901669.md#1">不起眼的青柠有6大功效 甚至能救人一命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900963.md#1">千万别刚起床就喝咖啡！这时间点喝最好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904654.md#1">18个存钱小技巧 还能让你成为百万富翁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906422.md#1">每天吃的沙拉油安全吗？一动作增癌症、失智风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127127.md#1">奉天命助圣王治世 百日为相白马化龙（上）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14131486.md#1">郑和七下西洋成功完成使命 背后显现神秘力量</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137444.md#1">【晚间新闻】遭港府悬赏通缉 许颖婷：坚持初心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137862.md#1">【新闻看点】知情人揭北京地铁事件惊人内幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137988.md#1">【周末大V谈】中国网红踢馆“西太后”掀风波</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136734.md#1">中共党魁访越遭冷遇？ 央视不敢报</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136601.md#1">有机和放养鸡蛋营养高？专家回答超你想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137649.md#1">周海媚去世前曾讲述一件诡异事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137438.md#1">自曝女儿个性像霍建华 林心如不愿她进演艺圈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136662.md#1">林心如自曝长相曾被嫌弃 差点无缘饰紫薇格格</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿童专属梦幻公主帐篷 亚马逊63%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137700.md#1">土库曼斯坦“地狱之门” 烈火燃烧逾半世纪</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071207.md#1">口臭很恼人 中药茶饮也能治疗尴尬的口臭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14135905.md#1">萝卜性寒 为何寒冬吃更好？</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/15/n13907272.htm">空手道学校老板：神韵舞蹈演员舞艺高超</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907272.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
